--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <header class="hero">
         <div class="container text-center">
-            <h1 style="color: #8ccf7e;">Kristen Marcinek</h1>
+            <h1 style="color: #8ccf7e;">Kristen Marčinek</h1>
             <p>Game Designer • Creative Technologist • Artist • Researcher</p>
         </div>
     </header>
