--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
 
             <div class="col-md-6 col-lg-4">
                 <div class="project-card">
+                    <img src="media/the-intruder.png" alt="Project">
+                    <div class="project-info">
+                        <h5>The Intruder (2026)</h5>
+                        <p>Web interactive</p>
+                        <a href="the-intruder.html" class="btn btn-sm btn-primary">Explore</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4">
+                <div class="project-card">
                     <img src="media/souls-physical.png" alt="Project">
                     <div class="project-info">
                         <h5>Souls in Symbiosis (2024)</h5>
