--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <img src="media/the-intruder.png" alt="Project">
                     <div class="project-info">
                         <h5>The Intruder (2026)</h5>
-                        <p>Web interactive</p>
+                        <p>Web Interactive</p>
                         <a href="the-intruder.html" class="btn btn-sm btn-primary">Explore</a>
                     </div>
                 </div>
