--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
 
                 <ul>
                     <li><strong>Skills:</strong> Visual design, programming, prototyping</li>
-                    <li><strong>Tools:</strong> Unity, Maya, Adobe Creative Cloud, Procreate, a fountain pen and dot
+                    <li><strong>Tools:</strong> Unity, Maya, Adobe Creative Cloud, Procreate, VSCode, a fountain pen and dot
                         grid notebook</li>
                     <li><strong>Interests:</strong> Narrative design, game design, worldbuilding, procedural rhetoric
                     </li>
