--- a/fleshwalk.html
+++ b/fleshwalk.html
@@ -26,7 +26,7 @@
         <p><strong>Role:</strong> Lead Designer, Solo Developer<br>
             <strong>Tools:</strong> Unity, C#, Maya, Photoshop
         </p>
-        <a href="https://fleshwalk.lichenlabs.xyz/" class="btn btn-primary">Play</a>
+        <a href="https://fleshwalk.lichenlabs.xyz/" class="btn btn-primary" target="_blank">Play</a>
 
         <div class="ratio ratio-16x9 my-4">
             <iframe src="https://www.youtube.com/embed/I1BQw0JaIwk?si=v5Q-eVVohlyZtLmc" allowfullscreen></iframe>
