adding a filter by tag system

--- a/index.html
+++ b/index.html
@@ -51,9 +51,16 @@
     </header>
 
     <main class="container my-5">
+        <div id="myBtnContainer">
+            <button class="btn active" onclick="filterSelection('all')"> Show all</button>
+            <button class="btn" onclick="filterSelection('games')"> Games</button>
+            <button class="btn" onclick="filterSelection('installation')"> Installations</button>
+            <button class="btn" onclick="filterSelection('web')"> Web</button>
+            <button class="btn" onclick="filterSelection('visual')"> Visual</button>
+        </div>
 
         <div class="row g-4">
-            <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4 project-filter games">
                 <div class="project-card">
                     <img src="media/fleshwalk-cover.png" alt="Project">
                     <div class="project-info">
@@ -64,7 +71,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4 project-filter visual">
                 <div class="project-card">
                     <img src="media/witch-frog-print-mockup.png" alt="Project">
                     <div class="project-info">
@@ -75,7 +82,8 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+
+            <div class="col-md-6 col-lg-4 project-filter web games">
                 <div class="project-card">
                     <img src="media/the-intruder.png" alt="Project">
                     <div class="project-info">
@@ -86,7 +94,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4 project-filter web installation">
                 <div class="project-card">
                     <img src="media/souls-physical.png" alt="Project">
                     <div class="project-info">
@@ -97,7 +105,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4 project-filter games">
                 <div class="project-card">
                     <img src="media/deepfake-files.png" alt="Project">
                     <div class="project-info">
@@ -108,7 +116,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4 project-filter game installation">
                 <div class="project-card">
                     <img src="media/trashcan-john.png" alt="Project">
                     <div class="project-info">
@@ -119,7 +127,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4 project-filter installation">
                 <div class="project-card">
                     <img src="media/mosaics-cover.png" alt="Project">
                     <div class="project-info">
@@ -130,7 +138,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4 project-filter installation">
                 <div class="project-card">
                     <img src="media/climate-action-heroes.png" alt="Project">
                     <div class="project-info">
@@ -141,7 +149,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4 project-filter games">
                 <div class="project-card">
                     <img src="media/psyche_quest.png" alt="Project">
                     <div class="project-info">
@@ -152,7 +160,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4 project-filter web games">
                 <div class="project-card">
                     <img src="media/dvd-sc.png" alt="Project">
                     <div class="project-info">
@@ -163,7 +171,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4 project-filter games">
                 <div class="project-card">
                     <img src="media/shmup-sc.png" alt="Project">
                     <div class="project-info">
@@ -175,7 +183,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4 project-filter web visual">
                 <div class="project-card">
                     <img src="media/hga1.png" alt="Project">
                     <div class="project-info">
@@ -186,7 +194,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4 project-filter visual">
                 <div class="project-card">
                     <img src="media/XenonLichen4.jpg" alt="Project">
                     <div class="project-info">
