--- a/about.html
+++ b/about.html
@@ -49,6 +49,8 @@
         <div class="row mt-4">
             <div class="col-md-4">
                 <img src="media/about-me.jpg" class="img-fluid rounded">
+                <script src="https://gusbus.space/smallweb-subway.js/creativesclub.js"></script>
+                <smallweb-subway-creativesclub></smallweb-subway-creativesclub>
             </div>
 
             <div class="col-md-8">
@@ -91,7 +93,8 @@
 
                 <ul>
                     <li><strong>Skills:</strong> Visual design, programming, prototyping</li>
-                    <li><strong>Tools:</strong> Unity, Maya, Adobe Creative Cloud, Procreate, VSCode, a fountain pen and dot
+                    <li><strong>Tools:</strong> Unity, Maya, Adobe Creative Cloud, Procreate, VSCode, a fountain pen and
+                        dot
                         grid notebook</li>
                     <li><strong>Interests:</strong> Narrative design, game design, worldbuilding, procedural rhetoric
                     </li>
