add scroll to top button

--- a/client-work.html
+++ b/client-work.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -75,9 +76,11 @@
         <a href="media/turnpyke2.png" class="glightbox">
             <img src="media/turnpyke2.png" class="img-fluid rounded">
         </a>
+    </main>
+    <button onclick="topFunction()" id="toTopBtn" title="Go to top">↑</button>
 
-        <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
-        <script src="js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
