--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
         </div>
 
     </main>
+    <button onclick="topFunction()" id="toTopBtn" title="Go to top">↑</button>
 
     <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
     <script src="js/main.js"></script>
