--- a/writing.html
+++ b/writing.html
@@ -91,6 +91,7 @@
             </article>
         </div>
     </main>
+    <button onclick="topFunction()" id="toTopBtn" title="Go to top">↑</button>
 
     <script src="js/main.js"></script>
 </body>
