--- a/about.html
+++ b/about.html
@@ -109,6 +109,7 @@
             </div>
         </div>
     </main>
+    <button onclick="topFunction()" id="toTopBtn" title="Go to top">↑</button>
 
     <script src="js/main.js"></script>
 </body>
