--- a/monthly-missions.html
+++ b/monthly-missions.html
@@ -159,6 +159,8 @@
             responsibility.</p>
     </main>
 
+    <button onclick="topFunction()" id="toTopBtn" title="Go to top">↑</button>
+
     <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
     <script src="js/main.js"></script>
 </body>
