--- a/teaching.html
+++ b/teaching.html
@@ -106,6 +106,7 @@
             </div>
         </div>
     </main>
+    <button onclick="topFunction()" id="toTopBtn" title="Go to top">↑</button>
 
     <script src="js/main.js"></script>
 </body>
