--- a/trashcan-john.html
+++ b/trashcan-john.html
@@ -56,6 +56,8 @@
 
     </main>
 
+    <button onclick="topFunction()" id="toTopBtn" title="Go to top">↑</button>
+
     <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
     <script src="js/main.js"></script>
 </body>
