--- a/index.html
+++ b/index.html
@@ -149,6 +149,17 @@
                 </div>
             </div>
 
+            <!-- <div class="col-md-6 col-lg-4 project-filter installation web">
+                <div class="project-card">
+                    <img src="media/ar-dream-machine.jpg" alt="Project">
+                    <div class="project-info">
+                        <h5>AR Map of the Dream Machine (2023)</h5>
+                        <p>Virtual Exhibit</p>
+                        <a href="ar-dream-machine.html" class="btn btn-sm btn-primary">Explore</a>
+                    </div>
+                </div>
+            </div> -->
+
             <div class="col-md-6 col-lg-4 project-filter games">
                 <div class="project-card">
                     <img src="media/psyche_quest.png" alt="Project">
