--- a/writing.html
+++ b/writing.html
@@ -34,8 +34,8 @@
                             target="_blank">GitHub</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/kristen-marcinek/"
                             target="_blank">LinkedIn</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/lichenlabsgames"
-                            target="_blank">Studio</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/lichenlabsgames"
+                            target="_blank">Studio</a></li> -->
                 </ul>
             </div>
 
