add wikipedia style toc

--- a/fleshwalk.html
+++ b/fleshwalk.html
@@ -42,7 +42,34 @@
             Fleshwalk serves as my work-in-progress MFA thesis.
         </p>
 
-        <h2>Screenshots</h2>
+        <div id="toc" class="toc">
+            <div class="toctitle">
+                <h2>Contents</h2>
+            </div>
+            <ul>
+                <li><a href="#screenshots"><span class="tocnumber">1</span> <span class="toctext">Screenshots</span></a>
+                </li>
+                <li><a href="#exhibitions"><span class="tocnumber">2</span> <span class="toctext">Exhibitions</span></a>
+                </li>
+                <li><a href="#worldbuilding"><span class="tocnumber">3</span> <span
+                            class="toctext">Worldbuilding</span></a></li>
+                <li><a href="#development"><span class="tocnumber">4</span> <span class="toctext">Development</span></a>
+                </li>
+                <li><a href="#press"><span class="tocnumber">5</span> <span class="toctext">Press</span></a>
+                    <ul>
+                        <li><a href="https://www.youtube.com/watch?v=3THue8l8kRo" target="_blank"><span
+                                    class="tocnumber">5.1</span> <span class="toctext">Neon Mic: Get A Close-up of
+                                    Fleshwalk</span></a>
+                        </li>
+                        <li><a href="https://www.youtube.com/watch?v=Li_Jm-2dnZA" target="_blank"><span
+                                    class="tocnumber">5.2</span> <span class="toctext">Indiepocalypse Radio - Episode 0189</span></a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+
+        <h2 id="screenshots">Screenshots</h2>
         <div class="row g-3">
             <div class="col-md-4">
                 <a href="media/fleshwalk_screenshot2.png" class="glightbox">
@@ -76,7 +103,7 @@
             </div>
         </div>
 
-        <h2>Exhibitions</h2>
+        <h2 id="exhibitions">Exhibitions</h2>
         <p>Fleshwalk: An Experience has been exhibited at MAGFest Quickplay, AwesomeCon, HanaCon, Grace Exhibition
             Space, Fantom Comics, Creepella's Posh Pit, and Dupont Underground.</p>
         <div class="row g-3">
@@ -112,7 +139,7 @@
             </div>
         </div>
 
-        <h2>Worldbuilding</h2>
+        <h2 id="worldbuilding">Worldbuilding</h2>
         <div class="row g-3">
             <div class="col-md-4">
                 <a href="media/worldbuilding1.jpg" class="glightbox">
@@ -146,7 +173,7 @@
             </div>
         </div>
 
-        <h2>Development</h2>
+        <h2 id="development">Development</h2>
         <div class="row g-3">
             <div class="col-md-4">
                 <a href="media/development4.jpg" class="glightbox">
@@ -168,7 +195,7 @@
             </div>
         </div>
 
-        <h2>Press</h2>
+        <h2 id="press">Press</h2>
         <div class="row g-3">
             <div class="col-md-6">
                 <div class="ratio ratio-16x9">
