--- a/psyche-quest.html
+++ b/psyche-quest.html
@@ -46,7 +46,36 @@
             uncovers the protagonist's memories, emotions, and experiences, shedding light on the impacts BPD has on
             mental health.</p>
 
-        <h2>Selected Assets</h2>
+        <div id="toc" class="toc">
+            <div class="toctitle">
+                <h2>Contents</h2>
+            </div>
+            <ul>
+                <li><a href="#assets"><span class="tocnumber">1</span> <span class="toctext">Selected Assets</span></a>
+                </li>
+                <li><a href="#level_design"><span class="tocnumber">2</span> <span class="toctext">Level
+                            Design</span></a>
+                    <ul>
+                        <li><a href="#amygdala"><span class="tocnumber">2.1</span> <span
+                                    class="toctext">Amygdala</span></a>
+                        </li>
+                        <li><a href="#hippocampus"><span class="tocnumber">2.2</span> <span
+                                    class="toctext">Hippocampus</span></a>
+                        </li>
+                        <li><a href="#prefrontal_cortex"><span class="tocnumber">2.3</span> <span
+                                    class="toctext">Prefrontal Cortex</span></a>
+                        </li>
+                        <li><a href="#hpa_axis"><span class="tocnumber">2.4</span> <span class="toctext">HPA
+                                    Axis</span></a>
+                        </li>
+                    </ul>
+                </li>
+                <li><a href="#future"><span class="tocnumber">3</span> <span class="toctext">Further
+                            Exploration</span></a></li>
+            </ul>
+        </div>
+
+        <h2 id="assets">Selected Assets</h2>
         <div class="row g-3">
             <div class="col-md-6">
                 <a href="media/psyche-pc1.png" class="glightbox">
@@ -80,29 +109,32 @@
         <p>Backgrounds for each level, visually representing how each area of the brain is affected by BPD while
             maintaining a brain matter-esque color scheme.</p>
 
-        <h2>Level Design</h2>
+        <h2 id="level_design">Level Design</h2>
         <ol>
-            <li>
+            <li id="amygdala">
                 Amygdala: The amygdala regulates fear and aggression. For people with BPD, their amygdalae are
                 noticeably
                 smaller than average and thus feel fear and anger more intensely. This level is horror-inspired.
             </li>
-            <li>Hippocampus: Being the body's data processor, the hippocampus deals with memory formation, spatial
+            <li id="hippocampus">Hippocampus: Being the body's data processor, the hippocampus deals with memory
+                formation, spatial
                 orientation, and emotional reactions. For people with BPD, their hippocampi are commonly in a state of
                 hyperarousal. This manifests in people with BPD perceiving friends and family as more threatening and
                 social interactions as more negative. With dizzying gameplay and fake platforms in this level, not
                 everything is as it seems.</li>
-            <li>Prefrontal Cortex: Responsible for reason, rationality, and decision-making, prefrontal cortexes for
+            <li id="prefrontal_cortex">Prefrontal Cortex: Responsible for reason, rationality, and decision-making,
+                prefrontal cortexes for
                 people with BPD are often inactive and inefficient, causing impulsive actions. To simulate this, this
                 level tests the players patience with high speed character movement mixed with slow speed environments.
                 Passing through portals in the game mirrors life's spontaneous decisions. Rushing through them can lead
                 to unforeseen challenges, emphasizing how impulsivity can result in regrettable outcomes.</li>
-            <li>HPA Axis: The HPA axis is the neural pathway within the brain that deals with reactions to stress and
+            <li id="hpa_axis">HPA Axis: The HPA axis is the neural pathway within the brain that deals with reactions to
+                stress and
                 maintaining cortisol levels. People with BPD are often found with high levels of cortisol in their
                 bloodstreams. Players must swim through the stress before time runs out.</li>
         </ol>
 
-        <h2>Further Exploration</h2>
+        <h2 id="future">Further Exploration</h2>
         <p>While I am happy with the minimum viable product presented here, there are changes and additions that can be
             further explored in the future. Namely, ensuring that the approach is not stigmatizing in and of itself and
             is both empathetic towards and grounded in the reality of those with BPD and those who love someone with
