--- a/monthly-missions.html
+++ b/monthly-missions.html
@@ -26,9 +26,43 @@
         <p><strong>Role:</strong> Copywriter<br>
             <strong>Where:</strong> National Children's Museum
         </p>
-        <br>
 
-        <h2>Examples authored by myself</h2>
+        <div id="toc" class="toc">
+            <div class="toctitle">
+                <h2>Contents</h2>
+            </div>
+            <ul>
+                <li><a href="#examples"><span class="tocnumber">1</span> <span class="toctext">Examples</span></a>
+                    <ul>
+                        <li><a href="#community_captain"><span
+                                    class="tocnumber">1.1</span> <span class="toctext">Community Captain</span></a>
+                        </li>
+                        <li><a href="#pollinator_patrol"><span
+                                    class="tocnumber">1.2</span> <span class="toctext">Pollinator Patrol</span></a>
+                        </li>
+                        <li><a href="#arbor_avenger"><span
+                                    class="tocnumber">1.3</span> <span class="toctext">Arbor Avenger</span></a>
+                        </li>
+                        <li><a href="#water_warrior"><span
+                                    class="tocnumber">1.4</span> <span class="toctext">Water Warrior</span></a>
+                        </li>
+                        <li><a href="#mighty_meteorologist"><span
+                                    class="tocnumber">1.5</span> <span class="toctext">Mighty Meteorologist</span></a>
+                        </li>
+                    </ul>
+                </li>
+                <li><a href="#what_is_climate_action_heroes"><span class="tocnumber">2</span> <span class="toctext">What is Climate Action Heroes?</span></a>
+                </li>
+                <li><a href="#what_are_monthly_missions"><span class="tocnumber">3</span> <span
+                            class="toctext">What are the monthly missions?</span></a></li>
+                <li><a href="#shift"><span class="tocnumber">4</span> <span class="toctext">A Shift in the Model</span></a>
+                </li>
+                <li><a href="#ideology"><span class="tocnumber">5</span> <span class="toctext">My Ideology</span></a>
+                </li>
+            </ul>
+        </div>
+
+        <h2 id="examples">Examples authored by myself</h2>
         <div class="container">
             <div class="row align-items-center g-3 mb-4">
                 <div class="col-12 col-md-2">
@@ -54,7 +88,7 @@
                     </a>
                 </div>
                 <div class="col-12 col-md-10">
-                    <h5>Pollinator Patrol</h5>
+                    <h5 id="pollinator_patrol">Pollinator Patrol</h5>
                     <p>
                         <i>When fall comes around, bees are a buzzy as ever looking for food for the winter! One aspect
                             of
@@ -74,7 +108,7 @@
                     </a>
                 </div>
                 <div class="col-12 col-md-10">
-                    <h5>Arbor Avenger</h5>
+                    <h5 id="arbor_avenger">Arbor Avenger</h5>
                     <p>
                         <i>When fall comes around, the colors of leaves start to change! This is because of less
                             sunlight.
@@ -93,7 +127,7 @@
                     </a>
                 </div>
                 <div class="col-12 col-md-10">
-                    <h5>Water Warrior</h5>
+                    <h5 id="water_warrior">Water Warrior</h5>
                     <p>
                         <i>Water is a resource that is all around us. One of the bonding features of living beings is
                             their
@@ -115,7 +149,7 @@
                     </a>
                 </div>
                 <div class="col-12 col-md-10">
-                    <h5>Mighty Meteorologist</h5>
+                    <h5 id="mighty_meteorologist">Mighty Meteorologist</h5>
                     <p>
                         <i>Did you know the reason our sky is blue is because the white light from the sun gets refracted
                         in the atmosphere, making the blue light shine brightest? The sky isn't always blue, though.
@@ -132,23 +166,23 @@
         <br>
 
         <br>
-        <h2>What is <a href="https://nationalchildrensmuseum.org/explore/exhibits/climate-action-heroes">Climate Action
+        <h2 id="what_is_climate_action_heroes">What is <a href="https://nationalchildrensmuseum.org/explore/exhibits/climate-action-heroes">Climate Action
                 Heroes</a>?</h2>
         <p>Climate Action Heroes is an exhibit created by the National Children's Museum featuring superhero identities
             that patrons can embody.
             There are 5 superheroes that kids can be: Community Captain, Pollinator Patrol, Arbor Avenger, Water
             Warrior, and Mighty Meteorologist.</p>
 
-        <h2>What are the monthly missions?</h2>
+        <h2 id="what_are_monthly_missions">What are the monthly missions?</h2>
         <p>Monthly Missions are tasks given by the museum to our Climate Action Heroes to complete. Some of these
             missions can be found on the website <a href="https://www.climate-heroes.org/monthly-missions">here</a>.</p>
 
-        <h2>A Shift in the Model</h2>
+        <h2 id="shift">A Shift in the Model</h2>
         <p>During my internship, rather than do one mission for all 5 heroes per month, the museum shifted the model to
             be
             1 per hero per month. I was tasked with creating a year's worth of missions for the website.</p>
 
-        <h2>My Ideology</h2>
+        <h2 id="ideology">My Ideology</h2>
         <p>For each mission, I ensured that they were nature and conservation themed. I also wanted the missions to be
             on topic for each hero and their theme. For example, Mighty Meteorologist missions are generally about
             weather and the atmosphere, while Pollinator Patrol missions are about bugs and plants.<br>
