--- a/ar-dream-machine.html
+++ b/ar-dream-machine.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,26 +27,35 @@
             <strong>Tools:</strong> HTML/CSS, JavaScript, TinkerCAD, Paint 3D
         </p>
 
-        <div class="ratio ratio-16x9 my-4">
-            <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
-        </div>
-
-        <p>
-            Short explanation of the game, mechanics, design goals, and what makes it interesting.
-        </p>
-
         <div class="row g-3">
-            <div class="col-md-4">
-                <a href="assets/images/shot1.png" class="glightbox">
-                    <img src="assets/images/shot1.png" class="img-fluid rounded">
+            <h2>What is the Dream Machine?</h2>
+            <div class="col-md-6">
+                <a href="media/dream-machine.avif" class="glightbox">
+                    <img src="media/dream-machine.avif" class="img-fluid rounded">
                 </a>
             </div>
+            <div class="col-md-6">
+                <p>The Dream Machine is a large climbing structure within the National Children’s Museum. It spans all 3
+                    of
+                    the museum's floors and is a visitor favorite.</p>
+                <h2>The Problem</h2>
+                <p>Many adult visitors have a hard time conceptualizing the Dream Machine, causing worry when their
+                    children are climbing it.</p>
+            </div>
+            <div class="col-md-8">
+                <h2>(Not Exactly) The Solution</h2>
+                <p>For a partial solution, I devised that an augmented reality map of the Dream Machine may help. This
+                    would require nothing of a visitor other than having a phone (or device with a camera) and internet
+                    access, which the museum provides. The visitor can scan the QR code (as seen above), and will be
+                    taken to a website where they can scan the QR code once more to see the 3D map.</p>
+            </div>
             <div class="col-md-4">
-                <a href="assets/images/shot2.png" class="glightbox">
-                    <img src="assets/images/shot2.png" class="img-fluid rounded">
+                <a href="media/ar-dream-machine.jpg" class="glightbox">
+                    <img src="media/ar-dream-machine.jpg" class="img-fluid rounded">
                 </a>
             </div>
         </div>
+
 
     </main>
 
