--- a/meditative-mosaics.html
+++ b/meditative-mosaics.html
@@ -52,6 +52,7 @@
                     <img src="media/mosaics.png" class="img-fluid rounded">
                 </a>
             </div>
+            <h2>Examples</h2>
             <div class="col-md-6">
                 <a href="media/mosaic1-min.jpg" class="glightbox">
                     <img src="media/mosaic1-min.jpg" class="img-fluid rounded">
