dream machine WIP public

--- a/ar-dream-machine.html
+++ b/ar-dream-machine.html
@@ -41,6 +41,7 @@
                 <h2>The Problem</h2>
                 <p>Many adult visitors have a hard time conceptualizing the Dream Machine, causing worry when their
                     children are climbing it.</p>
+                <p><i>Photo courtesy of the National Children's Museum.</i></p>
             </div>
             <div class="col-md-8">
                 <h2>(Not Exactly) The Solution</h2>
