--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </div>
             </div>
 
-            <!-- <div class="col-md-6 col-lg-4 project-filter installation web">
+            <div class="col-md-6 col-lg-4 project-filter installation web">
                 <div class="project-card">
                     <img src="media/ar-dream-machine.jpg" alt="Project">
                     <div class="project-info">
@@ -158,7 +158,7 @@
                         <a href="ar-dream-machine.html" class="btn btn-sm btn-primary">Explore</a>
                     </div>
                 </div>
-            </div> -->
+            </div>
 
             <div class="col-md-6 col-lg-4 project-filter games">
                 <div class="project-card">
