--- a/ar-dream-machine.html
+++ b/ar-dream-machine.html
@@ -55,6 +55,13 @@
                     <img src="media/ar-dream-machine.jpg" class="img-fluid rounded">
                 </a>
             </div>
+            <div class="col-md-8">
+                <h2>How it was made</h2>
+                <p>For the model of the Dream Machine, although not entirely finished yet, I used TinkerCAD and Paint
+                    3D. Both are very beginner friendly 3D CAD tools that can create robust solutions. For the backend,
+                    I used HTML & MindAR.js. MindAR.js is a powerful JavaScript library for web AR. The website is
+                    hosted using a GitHub repository and Netlify. </p>
+            </div>
         </div>
 
 
